# anything-ai-exploration

./: .gitignore  AGILE_FRAMEWORK.md  README.md  backlog.md  progress.md  pyproject.toml  test_auth.py  unet-idea.md
.cursor/rules/: create-new-sprint.mdc
sprints/01_paws_of_dread/: README.md
sprints/01_paws_of_dread/code/: generate_text.py  train_qlora_phi3_cats.py
sprints/01_paws_of_dread/docs/: 01_qlora_finetuning_explanation.md
sprints/02_spaghettinet/: README.md
sprints/02_spaghettinet/code/: spaghettinet.py  train.py
sprints/02_spaghettinet/docs/: 01_spaghettinet_explanation.md
sprints/03_titanic_torch_voyage/: README.md
sprints/03_titanic_torch_voyage/code/: ensemble_predict.py  predict_lightgbm.py  preprocess_data.py  titanic_dataset.py  titanic_model.py  train.py  train_lightgbm.py
sprints/04_attachment_theory_demo/: README.md
sprints/04_attachment_theory_demo/code/: attachment_gru.py  diffusion_visualizer.py  run_attachment_gru_inference.py  signals.py  train_unet.py  unet.py
sprints/04_attachment_theory_demo/docs/: 01_gru_attachment_pipeline.md  02_segmentation_report.md
utils/: __init__.py  auth.py
